<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fisio Calc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pimax" tools:ignore="MissingTranslation">Pressão Inspiratória Máxima (P. I. máx)</string>
    <string name="pemax">Pressão Expiratória Máxima – (P. E. máx)</string>
    <string name="cep">Complacência Estática Pulmonar</string>
    <string name="cdp">Complacência Dinâmica Pulmonar</string>
    <string name="rsp">Resistência do Sistema Pulmonar</string>
    <string name="io">Índice de Oxigenação (I.O)</string>
    <string name="fio">FiO2 Desejada</string>
    <string name="fr">Freqüência Respiratória (FR)</string>
    <string name="irs">Índice de Respiração Superficial (Tobin)</string>
    <string name="glasgow">Escala de Glasgow</string>
    <string name="ObedeceComandos">Obedece Comandos</string>
    <string name="LocalizaDor">Localiza Dor</string>
    <string name="MovimentoRetirada">Movimento de Retirada</string>
    <string name="FlexaoAnormal">Flexão Anormal</string>
    <string name="ExtensaoAnormal">Extensão Anormal</string>
    <string name="Nenhuma">Nenhuma</string>
    <string name="escala_de_coma_de_glasgow">Escala de Coma de Glasgow</string>
    <string name="volume_corrente">Volume Corrente</string>
    <string name="p_plat">P. platô</string>
    <string name="peep">PEEP</string>
    <string name="p_pico">P. pico</string>
    <string name="fluxo">Fluxo</string>
    <string name="pao2">PaO2</string>
    <string name="fio2">FiO2</string>
    <string name="fio2_desejada">FiO2 desejada</string>
    <string name="frequencia_respirat_ria">Frequencia respiratória</string>
    <string name="volume_corrente_l">Volume corrente (L)</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="info">Info</string>
    <string name="about_app">Aplicativo desenvolvido por: \nDaniel Amaral\nE-mail: eumagnun@gmail.com</string>
    <string name="sobre_o_app_tile">Sobre o App</string>
    <string name="observacao">Este aplicativo oferece cálculos voltados a área de fisioterápia porém não substitui o conhecimento de um profissional.  A qualquer momento um calculo pode vir a ser depreciado sem prévio aviso.  Em casos de divergências, ou quando estiver com alguma dúvida, a opinião de um profissional deverá prevalecer.\nFicarei grato se puder encaminhar suas sugestões </string>
    <string name="importante">Importante</string>
    <string name="build">Data versão: 23/05/2019 22:36</string>
    <string name="capacidade_vital">Capacidade Vital</string>
    <string name="pesoPredito">Peso Predito</string>
    <string name="pco2_esperado">PCO²Esperado</string>
    <string name="bic_acidose_metab_lica">Bic Acidose Metabólica</string>
    <string name="bic_alcalose_metab_lica">Bic Alcalose Metabólica</string>
    <string name="drive_pressure">Drive Pressure</string>
    <string name="iwi">Índice IWI</string>
    <string name="param_msg_ja_lida">param_msg_ja_lida</string>
    <string name="preference_file_key">br.com.fisiocalc.preferences</string>
    <string name="sair">Sair</string>
    <string name="entrar">Entrar</string>
    <string name="login">Login</string>
    <string name="codigo_admob">ca-app-pub-5007246500618998/5880660069</string>
    <string name="codigo_dispositivo_teste_admob">889E178D15F2793ACAF1D4F866C416D9</string>
    <string name="token_login_google">796995168072-4sqvb1nor8llfmr6cgp2gtpdkgfv41ao.apps.googleusercontent.com</string>
    <string name="campos_obrigatorios">Todos os campos são obrigatórios!</string>
    <string name="valor_calculo">Valor calculo:</string>
    <string name="data_calculo">Data calculo:</string>
    <string name="historico">Histórico de Cálculos</string>
    <string name="msg_carregando">Carregando...</string>
    <string name="msg_calculo_nao_efetuado">Cálculo não efetuado!</string>
    <string name="msg_calculo_A">Cálculo A =</string>
    <string name="msg_calculo_b">Cálculo B =</string>
    <string name="msg_glasgow_abertura_ocular_espontanea">Espontânea</string>
    <string name="msg_glasgow_abertura_ocular_voz">À voz</string>
    <string name="msg_glasgow_abertura_ocular_dor">À dor</string>
    <string name="msg_glasgow_abertura_ocular_nenhuma">Nenhuma</string>
    <string name="msg_selecione">Selecione</string>
    <string name="msg_glasgow_resp_verbal_orientada">Orientada</string>
    <string name="msg_glasgow_resp_verbal_confusa">Confusa</string>
    <string name="msg_glasgow_resp_verbal_palavras_inapropriadas">Palavras Inapropriadas</string>
    <string name="msg_glasgow_resp_verbal_palavras_incompreensivas">Palavras Incompreensivas</string>
    <string name="msg_glasgow_resp_verbal_nenhuma">Nenhuma</string>
    <string name="msg_acidose_metabolica">Acidose Metalólica =</string>
    <string name="msg_alcalose_metabolica">Alcalose Metabólica =</string>
    <string name="msg_intervalo_idade">A idade deve estar entre 20 e 80 anos</string>
    <string name="msg_calculo_padrao">-Cálculo Padrão =</string>
    <string name="msg_calculo_2010">-Cálculo 2010 =</string>
    <string name="msg_peso_homem">Peso Homem =</string>
    <string name="msg_volume_homem">Volume Homem =</string>
    <string name="msg_peso_mulher">Peso Mulher =</string>
    <string name="msg_volume_mulher">Volume Mulher =</string>
    <string name="msg_avalie_critique">Olá!  Sabia que vários cálculos foram implementados com base em sugestões de usuários?  Se tiver criticas ou sugestões elas serão muito bem vindas também!  É só enviar uma mensagem para eumagnun@gmail.com   Se achar que estamos indo no caminho certo e quiser nos avaliar é só clicar nas estrelas abaixo.</string>
    <string name="msg_muito_obrigado">Muito Obrigado!</string>
    <string name="avaliar_depois">Avaliar depois</string>
    <string name="n_o_ver_mais">Não ver mais</string>
    <string name="homem">Homem</string>
    <string name="mulher">Mulher</string>
    <string name="idade">Idade</string>
    <string name="altura_cm">Altura (cm)</string>
    <string name="informa_o">Informação:</string>
    <string name="formula_capacidade_vital_homem">Homens:CV = 0,05211 - 0,022 x idade -3,60 x altura (cm)</string>
    <string name="formula_capacidade_vital_mulher">Mulheres:CV = 0,4111 - 0,018 x idade - 2,69 x altura (cm)</string>
    <string name="calcular">Calcular</string>
    <string name="informacao">Informação:</string>
    <string name="paco2_conhecida">PaCO2 (conhecida)</string>
    <string name="fr_conhecida">FR (conhecida)</string>
    <string name="paco2_desejada">PaCO2 (desejada)</string>
    <string name="voc_n_o_n_est_1_logado">Você não está logado!</string>
    <string name="paciente">Paciente:</string>
    <string name="identificador_paciente">Identificador Paciente</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="press_o_inspirat_ria_m_xima_n_p_i_m_x">Pressão Inspiratória Máxima (P. I. máx)</string>
    <string name="mulheres_0_46_idade_74_25">Mulheres = -0,46 × idade + 74,25</string>
    <string name="homens_1_24_idade_232_37">Homens = -1,24 × idade + 232,37</string>
    <string name="f_rmula_pim_x_cmh2o_vers_o_2010">Fórmula Pimáx(cmH2O) - Versão 2010</string>
    <string name="mulheres_0_49_idade_110_4">Mulheres = -0,49 × idade + 110,4</string>
    <string name="homens_0_80_idade_155_3">Homens = -0,80 × idade + 155,3</string>
    <string name="f_rmula_pim_x_cmh2o_vers_o_padr_o">Fórmula Pimáx(cmH2O) - Versão Padrão</string>
    <string name="volume_por_quilo_ml">Volume por quilo (ml)</string>
    <string name="peso">Peso</string>
    <string name="press_o_expirat_ria_m_xima_n_p_e_m_x">Pressão Expiratória Máxima (P. E. máx)</string>
    <string name="f_rmula_pem_x_cmh2o_vers_o_padr_o">Fórmula Pemáx(cmH2O) - Versão Padrão</string>
    <string name="homens_165_4_0_81_x_idade">Homens = 165,4 – 0,81 x idade</string>
    <string name="mulheres_115_6_0_61_x_idade">Mulheres = 115,6 – 0,61 x idade</string>
    <string name="f_rmula_pem_x_cmh2o_vers_o_2010">Fórmula Pemáx(cmH2O) - Versão 2010</string>
    <string name="homens_1_26_idade_183_31">Homens = -1,26 × idade + 183,31</string>
    <string name="mulheres_0_68_idade_119_35">Mulheres = -0,68 × idade + 119,35</string>
    <string name="complacencia_estatica">Complacencia Estatica</string>
    <string name="tobin">Tobin</string>
    <string name="sao2">SaO2</string>
    <string name="c_lculo_iwi">Cálculo IWI</string>
    <string name="complac_ncia_est_tica_x_sao2_tobin_n_nvalores_25_sucesso_no_desmame"><![CDATA[(Complacência estática x SaO2) / Tobin  Valores > 25 = Sucesso no desmame]]></string>
    <string name="quer_nos_avaliar">Quer nos avaliar?</string>
    <string name="voc_n_o_n_est_logado">Você não está logado!</string>
    <string name="titulo">Titulo</string>
    <string name="disconectar">Disconectar</string>
    <string name="abertura_ocular">Abertura Ocular</string>
    <string name="resposta_verbal">Resposta Verbal</string>
    <string name="resposta_motora">Resposta Motora</string>
    <string name="refer_ncia">Referência:</string>
    <string name="_03_08_grave">03 - 08 = Grave</string>
    <string name="_09_12_moderado">09 - 12 = Moderado</string>
    <string name="_13_15_leve">13 - 15 = Leve</string>
    <string name="pao2_conhecida">PaO2 (conhecida)</string>
    <string name="fio2_conhecida">FiO2 (conhecida)</string>
    <string name="pao2_desejada">PaO2 (desejada)</string>
    <string name="complac_ncia_est_tica">Complacência Estática</string>
    <string name="press_o_plat">Pressão Platô</string>
    <string name="c_lculo_drive_pressure">Cálculo Drive Pressure</string>
    <string name="c_lculo_a_volume_corrente_complac_ncia_est_tica">Cálculo A: Volume Corrente / Complacência Estática</string>
    <string name="c_lculo_b_press_o_plat_peep">Cálculo B:Pressão Platô - Peep</string>
    <string name="resultado">Resultado</string>
    <string name="politica_de_privacidade">Politica de Privacidade</string>


</resources>
