<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    xmlns:android="http://schemas.android.com/apk/res/android" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_side_margin"
            android:paddingEnd="@dimen/default_side_margin">


            <TextView
                android:id="@+id/header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/default_side_margin"
                android:paddingBottom="@dimen/default_side_margin"
                android:text="@string/drive_pressure"
                android:textSize="22sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="20dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etVolumeCorrente"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/txtViewHeader"
                        android:hint="@string/volume_corrente"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:paddingLeft="20dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etComplacenciaEstatica"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/txtViewHeader"
                        android:hint="@string/complac_ncia_est_tica"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:paddingLeft="20dp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="36sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPressaoPlato"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/txtViewHeader"
                        android:hint="@string/press_o_plat"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:paddingLeft="20dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextHint">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPeep"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/txtViewHeader"
                        android:hint="Peep"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:paddingLeft="20dp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvResult2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="36sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btCalc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/calcular"
                        android:textAllCaps="false"
                        android:textColor="#FFF"
                        android:textSize="22dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fabGravar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:src="@android:drawable/ic_menu_save" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/informa_o"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/c_lculo_drive_pressure" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/c_lculo_a_volume_corrente_complac_ncia_est_tica" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/c_lculo_b_press_o_plat_peep" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView

        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5007246500618998/5880660069"></com.google.android.gms.ads.AdView>
</RelativeLayout>