<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/default_side_margin"
        android:paddingStart="@dimen/default_side_margin">


        <TextView
            android:id="@+id/header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/default_side_margin"
            android:paddingTop="@dimen/default_side_margin"
            android:text="@string/irs"
            android:textSize="22sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="10dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextHint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etFrequenciaRespiratoria"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/txtViewHeader"
                    android:hint="@string/frequencia_respirat_ria"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:paddingLeft="20dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextHint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etVolumeCorrenteL"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/txtViewHeader"
                    android:hint="@string/volume_corrente_l"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:paddingLeft="20dp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btCalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="#FFF"
                android:text="Calcular"
                android:textAllCaps="false"
                android:textSize="22dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="Informação: "
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/indice_tobin"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
